# benchmarker

./: .gitignore  pyproject.toml  ruff.toml
benchmark/: benchmarker.py  generate_test_cases.py  helpers.py  tests.py
benchmark/benchmark_viewer/: viewer.py
benchmark/helpers/: apify_helpers.py  general_helpers.py  openai_helpers.py
